[package]
name = "anubis"
version = "0.0.1"
authors = ["derg"]
edition = "2021"
build = "build.rs"
description = "Game launcher for gaming consoles"
repository = "https://github.com/qhua948/anubis"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3.2"
gilrs = "0.10.4"

[build-dependencies]
slint-build = "1.3.2"
