[package]
name = "anubis"
version = "0.0.2"
authors = ["derg"]
edition = "2021"
build = "build.rs"
description = "Game launcher for gaming consoles"
repository = "https://github.com/qhua948/anubis"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3.2"
gilrs = "0.10.4"
anyhow = "1.0"
log = "0.4.20"
env_logger = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }


[build-dependencies]
slint-build = "1.3.2"
